--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <img src="home.jpg" alt="Home Image">
     </div>
     <div class="home-right">
-      <h1>تصاميم كيوت وعصرية</h1>
+      <h1>كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</h1>
       <p>في Rêvola Design نخلق الجمال من البساطة!</p>
       <button class="signup-btn" onclick="openPopup()">Sign up</button>
     </div>
