--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
   <footer class="home-footer">
     <p>Follow me</p>
     <div class="social-icons">
-      <span>📘</span>
-      <span>📸</span>
-      <span>🎵</span>
+      <span>🫐</span>
+      <span>🍇</span>
+      <span>🥥</span>
     </div>
   </footer>
 
