--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+<header>
   <div class="navbar">
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About Us</a>
-    <a href="#services">Services</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
-  </nav>
-  <img src="logo.png" alt="logo" class="logo">
-</div>
-  </header>
-
+    <img src="logo.png" alt="logo" class="logo">
+    <nav class="nav-links">
+      <a href="#home">Home</a>
+      <a href="#about">About Us</a>
+      <a href="#services">Services</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
+    </nav>
+    <button class="signup-btn">Sign up</button>
+  </div>
+</header>
   <section id="home" class="home-section">
     <div class="home-left">
       <img src="home.jpg" alt="Home Image">
