--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
 <header>
   <div class="navbar">
-    <button class="signup-btn">Sign up</button>
+    <img src="logo.png" alt="Logo" class="logo">
 
     <nav class="nav-links">
       <a href="#home">Home</a>
-      <a href="#about">About Us</a>
+      <a href="#about">About us</a>
       <a href="#services">Services</a>
       <a href="#portfolio">Portfolio</a>
       <a href="#contact">Contact</a>
     </nav>
 
-    <img src="logo.png" alt="logo" class="logo">
+    <button class="signup-btn">Sign up</button>
   </div>
 </header>
   <section id="home" class="home-section">
