--- a/index.html
+++ b/index.html
@@ -54,3 +54,45 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Rêvola Design</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
+</head>
+<body>
+
+  <!-- Navbar -->
+  <nav>
+    <div class="logo">Rêvola Design</div>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About us</a></li>
+    </ul>
+  </nav>
+
+  <!-- Home Section -->
+  <section id="home" class="home-section">
+    <h1>Welcome to Rêvola Design</h1>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="about-section">
+    <div class="about-text">
+      <h1>About us</h1>
+      <p>
+        “At Rêvola Design, we create beauty from simplicity!<br>
+        We’re a passionate team dedicated to designing presentations, posters, cards, and more — all with a modern touch.<br>
+        We believe that every small detail has the power to make a big impact.”
+      </p>
+    </div>
+    <div class="about-image">
+      <img src="about.jpg" alt="About Us">
+    </div>
+  </section>
+
+  <script src="scroll.js"></script>
+</body>
+</html>
