--- a/index.html
+++ b/index.html
@@ -34,26 +34,29 @@
     </div>
   </section>
 
-  <footer class="home-footer">
+   <footer class="home-footer">
     <p>Follow me</p>
     <div class="social-icons">
-      <span>🫐</span>
-      <span>🍇</span>
-      <span>🥥</span>
+      <span>📘</span>
+      <span>📸</span>
+      <span>🎵</span>
     </div>
   </footer>
 
-  <div id="popup" class="popup">
+  <div id="signup-popup" class="popup">
     <div class="popup-content">
       <span class="close" onclick="closePopup()">&times;</span>
-      <h2>مرحبا بك في Rêvola!</h2>
-      <p>سجّل معنا لتصلك أحدث التصاميم!</p>
+      <h3>التسجيل</h3>
+      <p>يرجى ملء النموذج للتسجيل.</p>
     </div>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 
