--- a/index.html
+++ b/index.html
@@ -6,35 +6,37 @@
   <title>Rêvola Design</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Tajawal&display=swap" rel="stylesheet">
 </head>
 <body>
-<header>
-  <div class="navbar">
-    <img src="logo.png" alt="Logo" class="logo">
+  <header>
+    <div class="navbar">
+      <img src="logo.png" alt="Logo" class="logo">
 
-    <nav class="nav-links">
-      <a href="#home">Home</a>
-      <a href="#about">About us</a>
-      <a href="#services">Services</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#contact">Contact</a>
-    </nav>
+      <nav class="nav-links">
+        <a href="#home">Home</a>
+        <a href="#about">About us</a>
+        <a href="#services">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+      </nav>
 
-    <button class="signup-btn">Sign up</button>
-  </div>
-</header>
+      <button class="signup-btn">Sign up</button>
+    </div>
+  </header>
+
   <section id="home" class="home-section">
     <div class="home-left">
       <img src="home.jpg" alt="Home Image">
     </div>
     <div class="home-right">
-      <h1>كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</h1>
+      <h1>تصاميم كيوت وعصرية</h1>
+      <p>في Rêvola Design نخلق الجمال من البساطة!</p>
       <button class="signup-btn" onclick="openPopup()">Sign up</button>
     </div>
   </section>
 
-   <footer class="home-footer">
+  <footer class="home-footer">
     <p>Follow me</p>
     <div class="social-icons">
       <span>📘</span>
@@ -54,11 +56,6 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-<!DOCTYPE html>
-<html lang="en">
 
 
 
