--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
     </div>
   </header>
 
-  <section id="home" class="home-section">
-    <div class="home-left">
-      <img src="home.jpg" alt="Home Image">
-    </div>
-    <div class="home-right">
-      <h1>تصاميم كيوت وعصرية</h1>
-      <p>في Rêvola Design نخلق الجمال من البساطة!</p>
-      <button class="signup-btn" onclick="openPopup()">Sign up</button>
-    </div>
-  </section>
+<section id="home" class="home-section">
+  <div class="home-left">
+    <img src="home.jpg" alt="Home Image">
+  </div>
+  <div class="home-right">
+    <h1>تصاميم كيوت وعصرية</h1>
+    <p>في Rêvola Design نخلق الجمال من البساطة!</p>
+    <p class="sub-description">تصاميم احترافية بلمسة مميزة</p>
+    <button class="signup-btn" onclick="openPopup()">Sign up</button>
+  </div>
+</section>
 
   <footer class="home-footer">
     <p>Follow me</p>
