--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <img src="home.jpg" alt="Home Image">
   </div>
   <div class="home-right">
-    <h1>تصاميم كيوت وعصرية</h1>
+    <h1>كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</h1>
     <button class="signup-btn" onclick="openPopup()">Sign up</button>
   </div>
 </section>
