--- a/index.html
+++ b/index.html
@@ -25,39 +25,19 @@
     </div>
   </header>
 
-<section id="home" class="home-section">
-  <div class="home-left">
-    <img src="home.jpg" alt="Home Image">
-  </div>
-  <div class="home-right">
-    <h1>كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</h1>
-    <button class="signup-btn" onclick="openPopup()">Sign up</button>
+<section id="home" class="home-section new-home">
+  <div class="home-content">
+    <h1 class="main-title">Welcome to Rêvola Design</h1>
+    <p class="main-description">كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</p>
+    <button class="signup-btn">Sign up</button>
+    <p class="follow-text">Follow me</p>
+    <div class="social-icons">
+      <span>🌸</span>
+      <span>🌸</span>
+      <span>🌸</span>
+    </div>
   </div>
 </section>
-
-  <div id="signup-popup" class="popup">
-    <div class="popup-content">
-      <span class="close" onclick="closePopup()">&times;</span>
-      <h3>التسجيل</h3>
-      <p>يرجى ملء النموذج للتسجيل.</p>
-    </div>
-  </div>
-
-
-
-
-
-  <footer class="home-footer">
-    <p>Follow me</p>
-    <div class="social-icons">
-      <span>📘</span>
-      <span>📸</span>
-      <span>🎵</span>
-    </div>
-  </footer>
-  
-  <script src="script.js"></script>
-</body>
 </html>
 
 
