--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       <button class="signup-btn">Sign up</button>
     </div>
   </header>
+  
+  <div class="home-image">
+  <img src="home.jpg" alt="Home Image">
+</div>
 
 <section id="home" class="home-section new-home">
   <div class="home-content">
