--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
       <img src="home.jpg" alt="Home Image">
     </div>
     <div class="home-right">
-      <h1>تصاميم كيوت وعصريةكل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</h1>
-      <button class="signup-btn" onclick="openPopup()">Sign up</button>
-    </div>
+  <h1 class="logo-title">Rêvola Design</h1>
+  <p class="main-description">كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</p>
+  <button class="signup-btn">Sign up</button>
+</div>
   </section>
 
   <footer class="home-footer">
