--- a/index.html
+++ b/index.html
@@ -79,3 +79,23 @@
   <script src="scroll.js"></script>
 </body>
 </html>
+
+<section id="portfolio" class="portfolio-section">
+  <h2 class="portfolio-title">Portfolio</h2>
+  <p class="portfolio-subtitle">A little gallery of what we love to do</p>
+
+  <div class="portfolio-cards">
+    <div class="portfolio-card">
+      <img src="poster1.jpg" alt="Poster 1">
+      <p>Poster for a student specializing in nature and life sciences</p>
+    </div>
+    <div class="portfolio-card">
+      <img src="poster2.jpg" alt="Poster 2">
+      <p>Poster for a student specializing in nature and life sciences</p>
+    </div>
+    <div class="portfolio-card">
+      <img src="poster3.jpg" alt="Poster 3">
+      <p>Poster for a student specializing in nature and life sciences</p>
+    </div>
+  </div>
+</section>
