--- a/index.html
+++ b/index.html
@@ -99,3 +99,30 @@
     </div>
   </div>
 </section>
+
+<section id="contact" class="contact-section">
+  <div class="contact-image">
+    <img src="contact.jpg" alt="Contact Image">
+  </div>
+
+  <div class="contact-content">
+    <h2 class="contact-title">Contact</h2>
+
+    <div class="form-group">
+      <label>Nom</label>
+      <input type="text" class="contact-input">
+    </div>
+
+    <div class="form-group">
+      <label>Nom</label>
+      <input type="email" class="contact-input">
+    </div>
+
+    <div class="form-group">
+      <label>Nom</label>
+      <textarea class="contact-textarea"></textarea>
+    </div>
+
+    <button class="send-btn">Send</button>
+  </div>
+</section>
