--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
     </div>
 
     <div class="form-group">
-      <label>Nom</label>
+      <label>Gmail</label>
       <input type="email" class="contact-input">
     </div>
 
     <div class="form-group">
-      <label>Nom</label>
+      <label>Message</label>
       <textarea class="contact-textarea"></textarea>
     </div>
 
