--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
   <div class="portfolio-cards">
     <div class="portfolio-card">
       <img src="poster1.jpg" alt="Poster 1">
-      <p>Poster for a student specializing in nature and life sciences</p>
+      <p>Presentation of a student</p>
     </div>
     <div class="portfolio-card">
       <img src="poster2.jpg" alt="Poster 2">
-      <p>Poster for a student specializing in nature and life sciences</p>
+      <p>Certificate of participation by a media club</p>
     </div>
     <div class="portfolio-card">
       <img src="poster3.jpg" alt="Poster 3">
