--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
 <section id="portfolio" class="portfolio-section">
   <h2 class="portfolio-title">Portfolio</h2>
   <p class="portfolio-subtitle">A little gallery of what we love to do</p>
+<div class="portfolio-buttons">
+  <div class="circle-btn" onclick="toggleSignup(this)">Presentation</div>
+  <div class="circle-btn" onclick="toggleSignup(this)">Prints</div>
+  <div class="circle-btn" onclick="toggleSignup(this)">Cards</div>
+  <div class="circle-btn" onclick="toggleSignup(this)">Logos</div>
+  <div class="circle-btn" onclick="toggleSignup(this)">Diplômes</div>
+  <div class="circle-btn" onclick="toggleSignup(this)">Social media</div>
+  <div class="circle-btn" onclick="toggleSignup(this)">Videos</div>
+  <div class="circle-btn" onclick="toggleSignup(this)">Docs</div>
+</div>
+<div class="signup-message" style="display: none;">Sign up</div>
 
   <div class="portfolio-cards">
     <div class="portfolio-card">
