--- a/index.html
+++ b/index.html
@@ -1,60 +1,59 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rêvola Design</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Tajawal&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Rêvola Design</title>
 </head>
 <body>
-
-<header>
-  <div class="navbar">
-    <img src="logo.png" alt="Logo" class="logo">
-
-    <nav class="nav-links">
-      <a href="#home">Home</a>
-      <a href="#about">About us</a>
-      <a href="#services">Services</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#contact">Contact</a>
-    </nav>
-
-    <button class="signup-btn">Sign up</button>
-  </div>
-</header>
-
-  <section id="home" class="home-section">
-    <div class="home-left">
-      <img src="home.jpg" alt="Home Image">
+    <!-- Navbar -->
+    <div class="navbar">
+        <div class="logo">شعار</div>
+        <ul class="nav-items">
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Service</li>
+            <li>Portfolio</li>
+            <li>Contact</li>
+        </ul>
+        <div class="signup-icon">Sign up</div>
     </div>
-    <div class="home-right">
-  <h1 class="logo-title">Rêvola Design</h1>
-  <p class="main-description">كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</p>
-  <button class="signup-btn">Sign up</button>
-</div>
-  </section>
 
-  <footer class="home-footer">
-    <p>Follow me</p>
-    <div class="social-icons">
-      <span>🌸</span>
-      <span>🌸</span>
-      <span>🌸</span>
+    <!-- Main content -->
+    <div class="main-content">
+        <div class="left">
+            <img src="home.jpg" alt="Home Image" class="home-img">
+        </div>
+        <div class="right">
+            <h1>Rêvola Design</h1>
+            <p>كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</p>
+            <div class="signup-round">
+                Sign up
+            </div>
+        </div>
     </div>
-  </footer>
 
-  <div id="signup-popup" class="popup">
-    <div class="popup-content">
-      <span class="close" onclick="closePopup()">&times;</span>
-      <h3>التسجيل</h3>
-      <p>يرجى ملء النموذج للتسجيل.</p>
+    <!-- Footer -->
+    <div class="footer">
+        <p>Follow me</p>
+        <div class="social-icons">
+            <i class="facebook-icon"></i>
+            <i class="instagram-icon"></i>
+            <i class="tiktok-icon"></i>
+        </div>
     </div>
-  </div>
 
-  <script src="script.js"></script>
+    <script>
+        // To show the "Sign up" under Services
+        document.querySelectorAll('li').forEach(item => {
+            if (item.textContent === 'Service') {
+                item.addEventListener('click', () => {
+                    alert('Sign up');
+                });
+            }
+        });
+    </script>
 </body>
 </html>
 
