--- a/index.html
+++ b/index.html
@@ -1,63 +1,50 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Rêvola Design</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Rêvola Design</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navbar -->
-    <div class="navbar">
-        <div class="logo">شعار</div>
-        <ul class="nav-items">
-            <li>Home</li>
-            <li>About Us</li>
-            <li>Service</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
-        </ul>
-        <div class="signup-icon">Sign up</div>
-    </div>
 
-    <!-- Main content -->
-    <div class="main-content">
-        <div class="left">
-            <img src="home.jpg" alt="Home Image" class="home-img">
-        </div>
-        <div class="right">
-            <h1>Rêvola Design</h1>
-            <p>كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</p>
-            <div class="signup-round">
-                Sign up
-            </div>
-        </div>
-    </div>
+<header>
+  <div class="navbar">
+    <img src="logo.png" alt="Logo" class="logo">
+    <nav class="nav-links">
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#" onclick="showSignup()">Services</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Contact</a>
+    </nav>
+    <button class="signup-nav-btn">Sign up</button>
+  </div>
+</header>
 
-    <!-- Footer -->
-    <div class="footer">
-        <p>Follow me</p>
-        <div class="social-icons">
-            <i class="facebook-icon"></i>
-            <i class="instagram-icon"></i>
-            <i class="tiktok-icon"></i>
-        </div>
+<section class="main-section">
+  <div class="left-image">
+    <img src="home.jpg" alt="Home Image">
+  </div>
+  <div class="right-content">
+    <h1 class="main-title">Rêvola Design</h1>
+    <p class="main-desc">كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</p>
+    <button class="signup-main-btn">Sign up</button>
+    <p class="follow-text">Follow me</p>
+    <div class="social-icons">
+      <span>📘</span>
+      <span>📸</span>
+      <span>🎵</span>
     </div>
+    <div id="signup-message" class="signup-reveal" style="display: none;">Sign up</div>
+  </div>
+</section>
 
-    <script>
-        // To show the "Sign up" under Services
-        document.querySelectorAll('li').forEach(item => {
-            if (item.textContent === 'Service') {
-                item.addEventListener('click', () => {
-                    alert('Sign up');
-                });
-            }
-        });
-    </script>
+<script src="script.js"></script>
 </body>
 </html>
-
-
 
 
   <!-- About Section -->
