--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="nav-links">
       <a href="#">Home</a>
       <a href="#">About Us</a>
-      <a href="#" onclick="showSignup()">Services</a>
+      <a href="services.html">Services</a>
       <a href="#">Portfolio</a>
       <a href="#">Contact</a>
     </nav>
