--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
 <body>
 
 <!-- زر القائمة -->
-<div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
+<div class="menu-toggle" onclick="toggleMenu()">&#8942;</div> <!-- ⋮ -->
 
 <!-- القائمة الجانبية -->
 <div class="side-menu" id="sideMenu">
