--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <div class="navbar">
     <img src="logo.png" alt="Logo" class="logo">
     <nav class="nav-links">
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="services.html">Services</a>
-      <a href="#">Portfolio</a>
+      <a href="about.html">About Us</a>
+<a href="portfolio.html">Portfolio</a>
+<a href="contact.html">Contact</a>
+<a href="services.html">Services</a>
       <a href="#">Contact</a>
     </nav>
     <button class="signup-nav-btn">Sign up</button>
