--- a/services.html
+++ b/services.html
@@ -16,8 +16,10 @@
 
 <!-- القائمة الجانبية -->
 <div class="side-menu" id="sideMenu">
-  <a href="#">Home</a>
-  <a href="#">About Us</a>
+ <a href="about.html">About Us</a>
+<a href="portfolio.html">Portfolio</a>
+<a href="contact.html">Contact</a>
+<a href="services.html">Services</a>
   <div class="submenu-toggle" onclick="toggleSubmenu()">Services</div>
   <div id="servicesSubmenu" class="submenu">
     <a href="#">Presentation</a>
