--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
 <div class="services-page">
   <h1 class="services-title">Services</h1>
   <p class="services-desc">نصممها لك بحب.. استمتع بخدماتنا</p>
-
+    <a href="index.html" class="back-home">⬅ الرجوع للرئيسية</a>
   <div class="services-grid">
     <div class="service-box">
       <img src="service1.jpg" alt="Service">
