--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
 <header>
   <div class="navbar">
     <img src="logo.png" alt="Logo" class="logo">
-    <nav class="nav-links">
-      <a href="about.html">About Us</a>
-<a href="portfolio.html">Portfolio</a>
-<a href="contact.html">Contact</a>
-<a href="services.html">Services</a>
-      <a href="#">Contact</a>
-    </nav>
-    <button class="signup-nav-btn">Sign up</button>
+    <span class="brand-title">RÊVOLA DESIGN</span>
+    <div class="nav-actions">
+      <button class="signup-btn">Sign up</button>
+      <div class="menu-icon">&#9776;</div> <!-- أيقونة 3 خطوط -->
+    </div>
   </div>
 </header>
 
