--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </header>
 
 <section class="main-section">
-  <div class="left-image">
-    <img src="home.jpg" alt="Home Image">
-  </div>
+  <div class="image-side">
+  <img src="home.jpg" alt="Home Image">
+</div>
   <div class="right-content">
     <h1 class="main-title">Rêvola Design</h1>
     <p class="main-desc">كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</p>
