--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <img src="home.jpg" alt="Home Image">
 </div>
   <div class="right-content">
-    <h1 class="main-title">Rêvola Design</h1>
+    <h1 class="main-title">RÊVOLA DESIGN</h1>
     <p class="main-desc">كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</p>
     <button class="signup-main-btn">Sign up</button>
     <p class="follow-text">Follow me</p>
