--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header>
   <div class="navbar">
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="revola-logo.png" alt="Logo" class="logo">
     <span class="brand-title">RÊVOLA DESIGN</span>
     <div class="nav-actions">
       <button class="signup-btn">Sign up</button>
