--- a/index.html
+++ b/index.html
@@ -102,21 +102,43 @@
   <div class="contact-content">
     <h2 class="contact-title">Contact</h2>
 
-    <div class="form-group">
-      <label>Nom</label>
-      <input type="text" class="contact-input">
-    </div>
+    <!-- أضفنا الفورم هنا -->
+    <form id="contact-form">
+      <div class="form-group">
+        <label>Nom</label>
+        <input type="text" class="contact-input" name="user_name" required>
+      </div>
 
-    <div class="form-group">
-      <label>Gmail</label>
-      <input type="email" class="contact-input">
-    </div>
+      <div class="form-group">
+        <label>Gmail</label>
+        <input type="email" class="contact-input" name="user_email" required>
+      </div>
 
-    <div class="form-group">
-      <label>Message</label>
-      <textarea class="contact-textarea"></textarea>
-    </div>
+      <div class="form-group">
+        <label>Message</label>
+        <textarea class="contact-textarea" name="message" required></textarea>
+      </div>
 
-    <button class="send-btn">Send</button>
+      <button type="submit" class="send-btn">Send</button>
+    </form>
   </div>
 </section>
+
+<!-- سكربت EmailJS -->
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+  emailjs.init("rca3U6MlSNyFC_AUv"); // مفتاحك العام
+
+  document.getElementById("contact-form").addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    emailjs.sendForm("service_1hghbqi", "template_i0tdm8f", this)
+      .then(function() {
+        alert("🎉 تم إرسال رسالتك بنجاح!");
+        document.getElementById("contact-form").reset();
+      }, function(error) {
+        alert("❌ حدث خطأ أثناء الإرسال.");
+        console.log(error);
+      });
+  });
+</script>
