--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   </div>
 </header>
 
+<section id="home" class="page-section section-light">
+  
 <section class="main-section">
   <div class="image-side">
   <img src="home.jpg" alt="Home Image">
@@ -42,10 +44,12 @@
 <script src="script.js"></script>
 </body>
 </html>
-
+   </section>
 
   <!-- About Section -->
-  <section id="about" class="about-section">
+  </section>
+
+<section id="about" class="page-section section-dark">
     <div class="about-text">
       <h1>About us</h1>
       <p>
@@ -63,7 +67,7 @@
 </body>
 </html>
 
-<section id="portfolio" class="portfolio-section">
+<section id="portfolio" class="page-section section-light">
   <h2 class="portfolio-title">Portfolio</h2>
   <p class="portfolio-subtitle">A little gallery of what we love to do</p>
 <div class="portfolio-buttons">
@@ -94,7 +98,7 @@
   </div>
 </section>
 
-<section id="contact" class="contact-section">
+<section id="contact" class="page-section section-dark">
   <div class="contact-image">
     <img src="contact.jpg" alt="Contact Image">
   </div>
