--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- About Section -->
   </section>
 
-<section id="about" class="page-section section-dark">
+<section id="about" class="about-section">
     <div class="about-text">
       <h1>About us</h1>
       <p>
@@ -65,7 +65,7 @@
 </body>
 </html>
 
-<section id="portfolio" class="page-section section-light">
+<section id="portfolio" class="portfolio-section">
   <h2 class="portfolio-title">Portfolio</h2>
   <p class="portfolio-subtitle">A little gallery of what we love to do</p>
 <div class="portfolio-buttons">
@@ -96,7 +96,7 @@
   </div>
 </section>
 
-<section id="contact" class="page-section section-dark">
+<section id="contact" class="contact-section">
   <div class="contact-image">
     <img src="contact.jpg" alt="Contact Image">
   </div>
