--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <button class="signup-main-btn">Sign up</button>
     <p class="follow-text">Follow me</p>
     <div class="social-icons">
-      <span>📘</span>
-      <span>📸</span>
-      <span>🎵</span>
+      <span>🌸</span>
+      <span>🌸</span>
+      <span>🌸</span>
     </div>
     <div id="signup-message" class="signup-reveal" style="display: none;">Sign up</div>
   </div>
