--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 </section>
 
 <section id="contact" class="contact-section">
-  <div class="contact-image">
-    <img src="contact.jpg" alt="Contact Image">
+  <div class="revola-contact.png">
+    <img src="revola-contact.png" alt="Contact Image">
   </div>
 
   <div class="contact-content">
