--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 </section>
 
 <section id="contact" class="contact-section">
-  <div class="revola-contact.png">
-    <img src="revola-contact.png" alt="Contact Image">
-  </div>
+  <video class="contact-video" autoplay muted loop playsinline>
+  <source src="revola-contact.mp4" type="video/mp4">
+</video>
 
   <div class="contact-content">
     <h2 class="contact-title">Contact</h2>
