--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
   <link href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap" rel="stylesheet">
 </head>
 <body>
+<div id="sidebar" class="sidebar">
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About us</a></li>
+    <li class="has-submenu">
+      <a href="#">Services ▾</a>
+      <ul class="submenu">
+        <li><a href="#">Presentation</a></li>
+        <li><a href="#">Prints</a></li>
+        <li><a href="#">Cards</a></li>
+        <li><a href="#">Logos</a></li>
+        <li><a href="#">Diplômes</a></li>
+        <li><a href="#">Social media</a></li>
+        <li><a href="#">Videos</a></li>
+        <li><a href="#">Docs</a></li>
+      </ul>
+    </li>
+    <li><a href="#portfolio">Portfolio</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><button class="signup-btn">Sign up</button></li>
+  </ul>
+</div>
 
 <header>
   <div class="navbar">
