--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </div>
     <div id="signup-message" class="signup-reveal" style="display: none;">Sign up</div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
    </section>
