--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
       </p>
     </div>
     <div class="about-image">
-      <img src="about.jpg" alt="About Us">
-    </div>
+  <video class="about-video" autoplay muted loop playsinline>
+    <source src="about-video.mp4" type="video/mp4">
+    
+  </video>
+</div>
   </section>
 
   <script src="scroll.js"></script>
