--- a/index.html
+++ b/index.html
@@ -150,4 +150,12 @@
       <button type="submit" class="send-btn">Send</button>
     </form>
   </div>
+  <form id="contact-form">
+  <input type="text" name="user_name" required>
+  <input type="email" name="user_email" required>
+  <textarea name="message" required></textarea>
+  <button type="submit">Send</button>
+</form>
 </section>
+
+
