--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <span class="brand-title">RÊVOLA DESIGN</span>
     <div class="nav-actions">
       <button class="signup-btn">Sign up</button>
+      <button onclick="openSignup()">Sign up</button>
       <div class="menu-icon">&#9776;</div> <!-- أيقونة 3 خطوط -->
     </div>
   </div>
