--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <h1 class="main-title">RÊVOLA DESIGN</h1>
     <p class="main-desc">كل ما تحتاجه من تصاميم احترافية بلمسة مميزة تجده هنا ..</p>
     <button class="signup-main-btn">Sign up</button>
+    <button onclick="openSignup()">Sign up</button>
     <p class="follow-text">Follow me</p>
     <div class="social-icons">
       <span>🌸</span>
