--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="revola-logo.png" alt="Logo" class="logo">
     <span class="brand-title">RÊVOLA DESIGN</span>
     <div class="nav-actions">
-      <button onclick="openSignup()">Sign up</button>
+     <img src="profile-icon.png" class="profile-icon" onclick="openAccount()">
       <div class="menu-icon">&#9776;</div> <!-- أيقونة 3 خطوط -->
     </div>
   </div>
