--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <img src="revola-logo.png" alt="Logo" class="logo">
     <span class="brand-title">RÊVOLA DESIGN</span>
     <div class="nav-actions">
-     <img src="profile-icon.png" class="profile-icon" onclick="openAccount()">
+     <!-- زر Sign up -->
+<button class="signup-btn" onclick="openSignup()">Sign up</button>
+
+<!-- صورة البروفايل (مخفية بالبداية) -->
+<img src="profile-icon.png" class="profile-icon" id="profileIcon" style="display: none;" onclick="openAccount()">
       <div class="menu-icon">&#9776;</div> <!-- أيقونة 3 خطوط -->
     </div>
   </div>
