--- a/index.html
+++ b/index.html
@@ -27,26 +27,17 @@
 
 <script src="script.js"></script>
 
-<div id="sidebar" class="sidebar">
+<!-- أيقونة القائمة -->
+<div class="menu-icon">☰</div>
+
+<!-- القائمة الجانبية -->
+<div id="sidebar">
   <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#about">About us</a></li>
-    <li class="has-submenu">
-      <a href="#">Services ▾</a>
-      <ul class="submenu">
-        <li><a href="#">Presentation</a></li>
-        <li><a href="#">Prints</a></li>
-        <li><a href="#">Cards</a></li>
-        <li><a href="#">Logos</a></li>
-        <li><a href="#">Diplômes</a></li>
-        <li><a href="#">Social media</a></li>
-        <li><a href="#">Videos</a></li>
-        <li><a href="#">Docs</a></li>
-      </ul>
-    </li>
-    <li><a href="#portfolio">Portfolio</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li><button class="signup-btn">Sign up</button></li>
+    <li>Home</li>
+    <li>About us</li>
+    <li>Services</li>
+    <li>Portfolio</li>
+    <li>Contact</li>
   </ul>
 </div>
 
