--- a/index.html
+++ b/index.html
@@ -31,15 +31,20 @@
 <div class="menu-icon">☰</div>
 
 <!-- القائمة الجانبية -->
-<div id="sidebar">
-  <ul>
-    <li>Home</li>
-    <li>About us</li>
-    <li>Services</li>
-    <li>Portfolio</li>
-    <li>Contact</li>
-  </ul>
+<div id="sidebar" class="sidebar">
+  <div class="sidebar-content">
+    <img src="revola-logo.png" alt="Logo" class="sidebar-logo">
+    <a href="index.html">Home</a>
+    <a href="about.html">About us</a>
+    <a href="services.html">Services</a>
+    <a href="portfolio.html">Portifolio</a>
+    <a href="contact.html">Contact</a>
+    <a href="#" class="signup-btn">Sign up</a>
+  </div>
 </div>
+
+<script src="menu.js"></script>
+</body>
 
 <section class="main-section">
   <div class="image-side">
