--- a/index.html
+++ b/index.html
@@ -27,25 +27,7 @@
 
 <script src="script.js"></script>
 
-<!-- أيقونة القائمة --><!-- الشريط العلوي -->
-<header class="topbar">
-  <div class="logo" onclick="goHome()">RÊVOLA DESIGN</div>
-  <div class="menu-btn" id="menu-btn">☰</div>
-</header>
-
-<!-- القائمة الجانبية -->
-<nav class="side-menu" id="side-menu">
-  <div class="menu-content">
-    <div class="menu-logo">RÊVOLA DESIGN</div>
-    <ul class="menu-links">
-      <li><a href="#" data-page="home">Home</a></li>
-      <li><a href="#" data-page="about">About us</a></li>
-      <li><a href="#" data-page="services">Services</a></li>
-      <li><a href="#" data-page="portfolio">Portfolio</a></li>
-      <li><a href="#" data-page="contact">Contact</a></li>
-    </ul>
-    <div class="signup-btn"><a href="#" data-page="signup">Sign up</a></div>
-  </div>
+<!-- أيقونة القائمة --><!-- الشريط العلوي 
 </nav>
 
 <!-- مكان ظهور الصفحات -->
