--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
 <script src="script.js"></script>
  
-
+<!-- Home Section -->
+  </section>
 <section class="main-section">
   <div class="image-side">
   <img src="home.jpg" alt="Home Image">
