--- a/index.html
+++ b/index.html
@@ -20,9 +20,29 @@
 
 <!-- صورة البروفايل (مخفية بالبداية) -->
 <img src="profile-icon.png" class="profile-icon" id="profileIcon" style="display: none;" onclick="openAccount()">
-      <div class="menu-icon">&#9776;</div> <!-- أيقونة 3 خطوط -->
-    </div>
+      <header class="navbar">
+  <div class="logo" onclick="goHome()">RÊVOLA DESIGN</div>
+  <div class="menu-icon" onclick="toggleSidebar()">☰</div>
+</header>
+
+<!-- قائمة جانبية على اليمين -->
+<div id="sidebar" class="sidebar">
+  <div class="sidebar-header">
+    <img src="revola-logo.png" alt="Logo" class="sidebar-logo">
+    <h1>RÊVOLA DESIGN</h1>
   </div>
+  <nav class="sidebar-links">
+    <a href="index.html">Home</a>
+    <a href="about.html">About us</a>
+    <a href="services.html">Services</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact.html">Contact</a>
+    <a href="#" class="signup-btn">Sign up</a>
+  </nav>
+</div>
+
+<!-- تغطية شفافة عند فتح القائمة -->
+<div id="overlay" class="overlay" onclick="closeSidebar()"></div>
 </header>
 
 <script src="script.js"></script>
