--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TMC نادي مواهب الإعلام و الثقافة</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Tajawal&display=swap');
+
  :root {
         --primary-color: #17827D;
         --secondary-color: #0A2342;
@@ -642,4 +653,5 @@
         }, 5000);
     });
 </script>
+</html>
 
